--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -9,30 +9,58 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./css/transportes.css">
+    <link rel="stylesheet" href="../css/transportes.css">
     <link rel="stylesheet" href="./css/normalize.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+        crossorigin="anonymous"></script>
 </head>
 
 <body>
     <header>
-        <div class="holder">
-            <img src="./img/logo.png" width="100" alt="Transportes X">
+        <div class="logo">
+            <img src="../img/logo.png" alt="logo">
             <h1>Transportes X</h1>
         </div>
     </header>
-    <nav>
-        <div class="holder">
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a class="activo" href="nosotros.html">Nosotros</a></li>
-                <li><a href="servicios.html">Servicios</a></li>
-                <li><a href="galeria.html">Galeria</a></li>
-                <li><a href="novedades.html">Novedades</a></li>
-                <li><a href="contacto.html">Contacto</a></li>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="container-fluid">
+            <a class="navbar-logo navbar-logo-link" href="#">
+
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+        </div>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0 navbar-nav-custom">
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="./novedades.html">Novedades</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="./galeria.html">Galeria</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="./servicios.html">Servicios</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="./nosotros.html">Nosotros</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="./contacto.html">Contacto</a>
+                </li>
             </ul>
+
         </div>
     </nav>
-    <main class="holder">
+    <main class="main-container">
         <div class="historia">
             <h2>Historia</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor possimus deleniti ex nemo recusandae
@@ -46,7 +74,7 @@
             <h2>Staff</h2>
             <div class="personas">
                 <div class="persona">
-                    <img src="./img/nosotros/nosotros1.jpg" alt="Juan Gomez">
+                    <img src="../img/nosotros/nosotros1.jpg" alt="Juan Gomez">
                     <h5>Juan Gomez</h5>
                     <h6>Gerente General</h6>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur nulla culpa excepturi id
@@ -54,7 +82,7 @@
                         accusamus expedita suscipit. Minus, hic?</p>
                 </div>
                 <div class="persona">
-                    <img src="./img/nosotros/nosotros2.jpg" alt="Maria Suarez">
+                    <img src="../img/nosotros/nosotros2.jpg" alt="Maria Suarez">
                     <h5>Maria Suarez</h5>
                     <h6>Vendedora</h6>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur nulla culpa excepturi id
@@ -62,7 +90,7 @@
                         accusamus expedita suscipit. Minus, hic?</p>
                 </div>
                 <div class="persona">
-                    <img src="./img/nosotros/nosotros3.jpg" alt="Carlos Paz">
+                    <img src="../img/nosotros/nosotros3.jpg" alt="Carlos Paz">
                     <h5>Carlos Paz</h5>
                     <h6>Vendedor</h6>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur nulla culpa excepturi id
@@ -70,7 +98,7 @@
                         accusamus expedita suscipit. Minus, hic?</p>
                 </div>
                 <div class="persona">
-                    <img src="./img/nosotros/nosotros4.jpg" alt="Julia Luna">
+                    <img src="../img/nosotros/nosotros4.jpg" alt="Julia Luna">
                     <h5>Julia Luna</h5>
                     <h6>Recepcionista</h6>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur nulla culpa excepturi id
@@ -78,7 +106,7 @@
                         accusamus expedita suscipit. Minus, hic?</p>
                 </div>
                 <div class="persona">
-                    <img src="./img/nosotros/nosotros5.jpg" alt="Pablo Ruiz">
+                    <img src="../img/nosotros/nosotros5.jpg" alt="Pablo Ruiz">
                     <h5>Pablo Ruiz</h5>
                     <h6>Contador</h6>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur nulla culpa excepturi id
