--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -9,33 +9,61 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./css/transportes.css">
+    <link rel="stylesheet" href="../css/transportes.css">
     <link rel="stylesheet" href="./css/normalize.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+        crossorigin="anonymous"></script>
 </head>
 
 <body>
     <header>
-        <div class="holder">
-            <img src="./img/logo.png" width="100" alt="Transportes X">
+        <div class="logo">
+            <img src="../img/logo.png" alt="logo">
             <h1>Transportes X</h1>
         </div>
     </header>
-    <nav>
-        <div class="holder">
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="nosotros.html">Nosotros</a></li>
-                <li><a class="activo" href="servicios.html">Servicios</a></li>
-                <li><a href="galeria.html">Galeria</a></li>
-                <li><a href="novedades.html">Novedades</a></li>
-                <li><a href="contacto.html">Contacto</a></li>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="container-fluid">
+            <a class="navbar-logo navbar-logo-link" href="#">
+
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+        </div>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0 navbar-nav-custom">
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="./novedades.html">Novedades</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="./galeria.html">Galeria</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="./servicios.html">Servicios</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="./nosotros.html">Nosotros</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="./contacto.html">Contacto</a>
+                </li>
             </ul>
+
         </div>
     </nav>
     <main class="holder">
         <h2>Servicios</h2>
         <div class="servicio">
-            <img src="./img/servicios/ferroviario.jpg" alt="Tren">
+            <img src="../img/servicios/ferroviario.jpg" alt="Tren">
 
             <div class="info">
                 <h4>Transporte Ferroviario</h4>
@@ -46,7 +74,7 @@
             </div>
         </div>
         <div class="servicio">
-            <img src="./img/servicios/aereo.jpg" alt="Avion">
+            <img src="../img/servicios/aereo.jpg" alt="Avion">
 
             <div class="info">
                 <h4>Transporte Aereo</h4>
@@ -57,7 +85,7 @@
             </div>
         </div>
         <div class="servicio">
-            <img src="./img/servicios/maritimo.jpg" alt="Barco">
+            <img src="../img/servicios/maritimo.jpg" alt="Barco">
 
             <div class="info">
                 <h4>Transporte Maritimo</h4>
@@ -68,7 +96,7 @@
             </div>
         </div>
         <div class="servicio">
-            <img src="./img/servicios/terrestre.jpg" alt="Camion">
+            <img src="../img/servicios/terrestre.jpg" alt="Camion">
 
             <div class="info">
                 <h4>Transporte Terrestre</h4>
