--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -67,19 +67,19 @@
             <form action="https://formspree.io/f/myyaanqj" method="POST" class="formulario" id="myForm"
                 onsubmit="return validateForm()">
                 <label for="name">Nombre:</label>
-                <input type="text" id="name" required>
+                <input type="text" name="name" id="name" required>
 
                 <label for="lastName">Apellido:</label>
-                <input type="text" id="lastName" required>
+                <input type="text" name="lastName" id="lastName" required>
 
                 <label for="phone">Teléfono:</label>
-                <input type="text" id="phone" required>
+                <input type="text" name="phone" id="phone" required>
 
                 <label for="email">Email:</label>
-                <input type="email" id="email" required>
+                <input type="email" name="email" id="email" required>
 
                 <label for="comment">Comentario:</label>
-                <textarea id="comment" required></textarea>
+                <textarea id="comment" name="comment" required></textarea>
 
                 <input type="submit" value="Enviar">
             </form>
