--- a/index.html
+++ b/index.html
@@ -42,19 +42,19 @@
                     <a class="nav-link active" aria-current="page" href="#">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="./novedades.html">Novedades</a>
+                    <a class="nav-link" href="./pages/novedades.html">Novedades</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="./galeria.html">Galeria</a>
+                    <a class="nav-link" href="./pages/galeria.html">Galeria</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="./servicios.html">Servicios</a>
+                    <a class="nav-link" href="./pages/servicios.html">Servicios</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="./nosotros.html">Nosotros</a>
+                    <a class="nav-link" href="./pages/nosotros.html">Nosotros</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="./contacto.html">Contacto</a>
+                    <a class="nav-link" href="./pages/contacto.html">Contacto</a>
                 </li>
             </ul>
 
