--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../css/transportes.css">
+    <link rel="stylesheet" href="./css/transportes.css">
     
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
@@ -21,7 +21,7 @@
 <body>
     <header>
         <div class="logo">
-            <img src="./../img/logo.png" alt="logo">
+            <img src="./img/logo.png" alt="logo">
             <h1>Transportes X</h1>
         </div>
     </header>
@@ -64,7 +64,7 @@
 
     <main class="main-container">
         <div class="imagen-container">
-            <img src="../img/home/img01.jpg" alt="Avion">
+            <img src="./img/home/img01.jpg" alt="Avion">
         </div>
         <div class="columnas">
             <div class="bienvenidos-left">
