--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/transportes.css">
-    
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
@@ -62,38 +62,40 @@
         </div>
     </nav>
     <main class="main-container">
-        <div class="columna left">
-            <h2>Contacto Rápido</h2>
-            <form action="https://formspree.io/f/myyaanqj" method="POST" class="formulario" id="myForm"
-                onsubmit="return validateForm()">
-                <label for="name">Nombre:</label>
-                <input type="text" name="name" id="name" required>
+        <div class="form">
+            <div class="columna left">
+                <h2>Contacto Rápido</h2>
+                <form action="https://formspree.io/f/myyaanqj" method="POST" class="formulario" id="myForm"
+                    onsubmit="return validateForm()">
+                    <label for="name">Nombre:</label>
+                    <input type="text" name="name" id="name" required>
 
-                <label for="lastName">Apellido:</label>
-                <input type="text" name="lastName" id="lastName" required>
+                    <label for="lastName">Apellido:</label>
+                    <input type="text" name="lastName" id="lastName" required>
 
-                <label for="phone">Teléfono:</label>
-                <input type="text" name="phone" id="phone" required>
+                    <label for="phone">Teléfono:</label>
+                    <input type="text" name="phone" id="phone" required>
 
-                <label for="email">Email:</label>
-                <input type="email" name="email" id="email" required>
+                    <label for="email">Email:</label>
+                    <input type="email" name="email" id="email" required>
 
-                <label for="comment">Comentario:</label>
-                <textarea id="comment" name="comment" required></textarea>
+                    <label for="comment">Comentario:</label>
+                    <textarea id="comment" name="comment" required></textarea>
 
-                <input type="submit" value="Enviar">
-            </form>
-        </div>
-        <div class="columna right">
-            <h2>Otras vias de contacto</h2>
-            <p>También se pueden comunicar con nosotros ....</p>
-            <ul>
-                <li><i class="fa-solid fa-phone"></i>Teléfono: </li>
-                <li><i class="fa-solid fa-envelope"></i>Email:contacto@transportesX.com.ar</li>
-                <li><i class="fa-brands fa-facebook"></i>Facebook:</li>
-                <li><i class="fa-brands fa-twitter"></i>Twitter:</li>
-                <li><i class="fa-brands fa-instagram"></i>Instagram:</li>
-            </ul>
+                    <input type="submit" value="Enviar">
+                </form>
+            </div>
+            <div class="columna right">
+                <h2>Otras vias de contacto</h2>
+                <p>También se pueden comunicar con nosotros ....</p>
+                <ul>
+                    <li><i class="fa-solid fa-phone"></i>Teléfono: </li>
+                    <li><i class="fa-solid fa-envelope"></i>Email:contacto@transportesX.com.ar</li>
+                    <li><i class="fa-brands fa-facebook"></i>Facebook:</li>
+                    <li><i class="fa-brands fa-twitter"></i>Twitter:</li>
+                    <li><i class="fa-brands fa-instagram"></i>Instagram:</li>
+                </ul>
+            </div>
         </div>
     </main>
     <footer>
@@ -101,4 +103,5 @@
     </footer>
 </body>
 <script src="../js/form.js"></script>
+
 </html>
