--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/transportes.css">
-    <link rel="stylesheet" href="./css/normalize.css">
+    
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
@@ -60,7 +60,7 @@
 
         </div>
     </nav>
-    <main class="holder">
+    <main class="main-container">
         <h2>Servicios</h2>
         <div class="servicio">
             <img src="../img/servicios/ferroviario.jpg" alt="Tren">
